[tool.poetry]
name = "simheuristics"
version = "0.1.0"
description = ""
authors = ["SamanNsr <62355776+SamanNsr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

numpy = "^1.21.2"
matplotlib = "^3.8.1"
openpyxl = "^3.1.2"
pandas = "^2.1.3"
chart-studio = "^1.1.0"
plotly = "^5.18.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
